--- a/1.tokenizer.ipynb
+++ b/1.tokenizer.ipynb
@@ -9,13 +9,18 @@
      "data": {
       "text/plain": [
        "{'input_ids': tensor([[ 2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
-       "           2,  9, 14,  5,  6,  7,  8, 18,  5,  6,  7,  8,  9, 10],\n",
-       "         [ 2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2, 13, 13, 13,\n",
-       "          13, 14, 13, 13, 13, 13, 18, 13, 13, 13, 13, 13, 13, 13]],\n",
-       "        device='cuda:0'),\n",
-       " 'attention_mask': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "          1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "           2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "           2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "           2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "           2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "           2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2, 13,  4, 14,\n",
+       "          10,  7, 18,  5,  9,  7, 14, 11,  9, 18,  6,  6, 12, 14,  7, 11, 18,  6,\n",
+       "           9,  8]], device='cuda:0'),\n",
+       " 'attention_mask': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "          1, 1, 1, 1, 1, 1, 1, 1]], device='cuda:0')}"
       ]
      },
@@ -35,10 +40,6 @@
     "        self.vocab_encode = {j: i for i, j in enumerate(vocab)}\n",
     "        self.vocab_decode = {i: j for i, j in enumerate(vocab)}\n",
     "\n",
-    "        self.bos_token = 'B'\n",
-    "        self.eos_token = 'E'\n",
-    "        self.pad_token = 'P'\n",
-    "        self.mask_token = 'M'\n",
     "        self.bos_token_id = self.vocab_encode['B']\n",
     "        self.eos_token_id = self.vocab_encode['E']\n",
     "        self.pad_token_id = self.vocab_encode['P']\n",
@@ -116,14 +117,36 @@
     "\n",
     "tokenizer = Tokenizer()\n",
     "\n",
-    "tokenizer(['5+1234=123456', '9999+9999=9999999'],\n",
+    "tokenizer(['90+63=153+75=228+37=254'],\n",
     "          padding='max_length',\n",
     "          truncation=True,\n",
-    "          max_length=32,\n",
     "          add_bos_token=False,\n",
     "          add_eos_token=False,\n",
     "          padding_side='left',\n",
     "          device='cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'90+63=153+75=228+37=254'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode([\n",
+    "    13, 4, 14, 10, 7, 18, 5, 9, 7, 14, 11, 9, 18, 6, 6, 12, 14, 7, 11, 18, 6,\n",
+    "    9, 8\n",
+    "])"
    ]
   }
  ],
