--- a/7.test.ipynb
+++ b/7.test.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Tokenizer at 0x7f8df48e4520>"
+       "<__main__.Tokenizer at 0x7eff61f4c760>"
       ]
      },
      "execution_count": 1,
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "(1000000, {'text': '4714+3261=', 'label': 1})"
+       "(1000000, {'text': '9092+3039=12131+2715=', 'label': 1})"
       ]
      },
      "execution_count": 2,
@@ -78,22 +78,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'question': 'B9199+1350=', 'answer': 10549, 'gen': '10549E'}\n",
-      "{'question': 'B999+8643=', 'answer': 9642, 'gen': '9642E'}\n",
-      "{'question': 'B2302+1625=', 'answer': 3927, 'gen': '3927E'}\n",
-      "{'question': 'B8277+3408=', 'answer': 11685, 'gen': '11685E'}\n",
-      "{'question': 'B939+3877=', 'answer': 4816, 'gen': '4316E'}\n",
-      "{'question': 'B8709+738=', 'answer': 9447, 'gen': '9447E'}\n",
-      "{'question': 'B8602+3038=', 'answer': 11640, 'gen': '11640E'}\n",
-      "{'question': 'B9418+6823=', 'answer': 16241, 'gen': '16241E'}\n",
-      "{'question': 'B7894+1129=', 'answer': 9023, 'gen': '9023E'}\n",
-      "{'question': 'B7220+2682=', 'answer': 9902, 'gen': '9902E'}\n",
-      "{'question': 'B4999+1116=', 'answer': 6115, 'gen': '6115E'}\n",
-      "{'question': 'B2613+8340=', 'answer': 10953, 'gen': '10953E'}\n",
-      "{'question': 'B7482+5164=', 'answer': 12646, 'gen': '12646E'}\n",
-      "{'question': 'B2012+4254=', 'answer': 6266, 'gen': '6266E'}\n",
-      "{'question': 'B4528+4072=', 'answer': 8600, 'gen': '8600E'}\n",
-      "{'question': 'B8456+75=', 'answer': 8531, 'gen': '8521E'}\n"
+      "{'question': 'B1505+1349=', 'gen': '2854E'}\n",
+      "{'question': 'B2437+4395=', 'gen': '6832E'}\n",
+      "{'question': 'B4520+9682=14202+6648=', 'gen': '20850E'}\n",
+      "{'question': 'B1123+6282=7405+9943=', 'gen': '17348E'}\n",
+      "{'question': 'B4272+2422=6694+1660=', 'gen': '8354E'}\n",
+      "{'question': 'B1318+4655=5973+849=', 'gen': '6822E'}\n",
+      "{'question': 'B7902+2157=10059+9503=19562+3976=', 'gen': '23538E'}\n",
+      "{'question': 'B7561+6435=13996+8341=22337+3570=', 'gen': '25907E'}\n",
+      "{'question': 'B5523+5655=11178+1142=12320+7360=', 'gen': '19680E'}\n",
+      "{'question': 'B7646+2607=10253+5962=16215+6479=', 'gen': '22694E'}\n",
+      "{'question': 'B6170+7481=', 'gen': '13651E'}\n",
+      "{'question': 'B8975+7528=16503+7284=23787+7744=', 'gen': '31531E'}\n",
+      "{'question': 'B427+9585=10012+4876=14888+6666=', 'gen': '21554E'}\n",
+      "{'question': 'B5646+2024=7670+8478=16148+3802=', 'gen': '19950E'}\n",
+      "{'question': 'B8332+553=8885+7602=16487+1586=', 'gen': '18073E'}\n",
+      "{'question': 'B2801+482=3283+6315=9598+6933=', 'gen': '16539E'}\n"
      ]
     }
    ],
@@ -115,15 +115,235 @@
     "               eos_token_id=tokenizer.eos_token_id)\n",
     "gen = gen[:, question.shape[1]:]\n",
     "\n",
+    "last_index = lambda lst, ele: len(lst) - lst[::-1].index(ele)\n",
+    "\n",
     "for q, g in zip(question, gen):\n",
     "    q = tokenizer.decode(q)\n",
     "    g = tokenizer.decode(g)\n",
-    "    a = q\n",
-    "    a = a[a.index(tokenizer.bos_token) + 1:]\n",
-    "    a = a[:a.index('=')]\n",
-    "    a = int(eval(a))\n",
     "\n",
-    "    print({'question': q, 'answer': a, 'gen': g})"
+    "    print({'question': q, 'gen': g})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "880825aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1670+5429=7099+2747=\n",
+      "3 3924+3389=7313+8346=15659+8604=\n",
+      "3 2719+6277=8996+3262=12258+953=\n",
+      "2 826+1907=2733+5646=\n",
+      "3 3922+1595=5517+1165=6682+4480=\n",
+      "1 3701+1823=\n",
+      "3 5799+8308=14107+5858=19965+2942=\n",
+      "3 4707+9207=13914+4240=18154+8104=\n",
+      "1 6662+8664=\n",
+      "3 4694+7519=12213+6355=18568+9461=\n",
+      "1 1152+7609=\n",
+      "2 4902+4140=9042+9570=\n",
+      "2 537+4710=5247+6295=\n",
+      "3 9543+5018=14561+6831=21392+8808=\n",
+      "1 2630+1753=\n",
+      "2 7195+6947=14142+3261=\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in random.choices(dataset, k=16):\n",
+    "    print(i['text'].count('='),i['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1ba42f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sent 1000+1000=\n",
+      "q B1000+1000=\n",
+      "gen [6, 4, 4, 4]\n",
+      "gen [6, 4, 4, 4]\n",
+      "gen 2000\n",
+      "sent 1000+1000=2000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2000'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent = ''\n",
+    "\n",
+    "\n",
+    "def inference(q):\n",
+    "    global sent\n",
+    "\n",
+    "    sent += q + '='\n",
+    "\n",
+    "    #限制最大轮次\n",
+    "    if sent.count('=') > 3:\n",
+    "        idx = sent.index('=') + 1\n",
+    "        sent = sent[idx:]\n",
+    "\n",
+    "    print('sent', sent)\n",
+    "\n",
+    "    #编码\n",
+    "    q = tokenizer([sent],\n",
+    "                  device=device,\n",
+    "                  add_bos_token=True,\n",
+    "                  add_eos_token=False)['input_ids']\n",
+    "\n",
+    "    print('q', tokenizer.decode(q[0]))\n",
+    "\n",
+    "    #生成回答\n",
+    "    gen = generate(model_actor,\n",
+    "                   input_ids=q,\n",
+    "                   pad_token_id=tokenizer.pad_token_id,\n",
+    "                   eos_token_id=tokenizer.eos_token_id)\n",
+    "    gen = gen[:, q.shape[1]:][0].tolist()\n",
+    "\n",
+    "    #切除eos\n",
+    "    if tokenizer.eos_token_id in gen:\n",
+    "        idx = gen.index(tokenizer.eos_token_id)\n",
+    "        gen = gen[:idx]\n",
+    "\n",
+    "    print('gen', gen)\n",
+    "\n",
+    "    #如果生成了多余的对话,切除\n",
+    "    if tokenizer.eq_token_id in gen:\n",
+    "        idx = gen.index(tokenizer.eq_token_id)\n",
+    "        gen = gen[:idx]\n",
+    "\n",
+    "    print('gen', gen)\n",
+    "\n",
+    "    gen = tokenizer.decode(gen)\n",
+    "\n",
+    "    print('gen', gen)\n",
+    "\n",
+    "    #拼接上下文\n",
+    "    sent += gen\n",
+    "\n",
+    "    print('sent', sent)\n",
+    "\n",
+    "    return gen\n",
+    "\n",
+    "\n",
+    "inference('1000+1000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "56e7c83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sent 1000+1000=2000+500=\n",
+      "q B1000+1000=2000+500=\n",
+      "gen [6, 9, 4, 4]\n",
+      "gen [6, 9, 4, 4]\n",
+      "gen 2500\n",
+      "sent 1000+1000=2000+500=2500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2500'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference('+500')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1394a1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sent 1000+1000=2000+500=2500+500=\n",
+      "q B1000+1000=2000+500=2500+500=\n",
+      "gen [7, 4, 4, 4]\n",
+      "gen [7, 4, 4, 4]\n",
+      "gen 3000\n",
+      "sent 1000+1000=2000+500=2500+500=3000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'3000'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference('+500')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7e2316c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sent 2000+500=2500+500=3000+500=\n",
+      "q B2000+500=2500+500=3000+500=\n",
+      "gen [7, 9, 4, 4]\n",
+      "gen [7, 9, 4, 4]\n",
+      "gen 3500\n",
+      "sent 2000+500=2500+500=3000+500=3500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'3500'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference('+500')"
    ]
   }
  ],
