--- a/7.test.ipynb
+++ b/7.test.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Tokenizer at 0x7eff61f4c760>"
+       "<__main__.Tokenizer at 0x7f4064c5c550>"
       ]
      },
      "execution_count": 1,
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "(1000000, {'text': '9092+3039=12131+2715=', 'label': 1})"
+       "(1000000, {'text': '323+7939=8262+945=9207+2570=', 'label': 1})"
       ]
      },
      "execution_count": 2,
@@ -78,28 +78,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'question': 'B1505+1349=', 'gen': '2854E'}\n",
-      "{'question': 'B2437+4395=', 'gen': '6832E'}\n",
-      "{'question': 'B4520+9682=14202+6648=', 'gen': '20850E'}\n",
-      "{'question': 'B1123+6282=7405+9943=', 'gen': '17348E'}\n",
-      "{'question': 'B4272+2422=6694+1660=', 'gen': '8354E'}\n",
-      "{'question': 'B1318+4655=5973+849=', 'gen': '6822E'}\n",
-      "{'question': 'B7902+2157=10059+9503=19562+3976=', 'gen': '23538E'}\n",
-      "{'question': 'B7561+6435=13996+8341=22337+3570=', 'gen': '25907E'}\n",
-      "{'question': 'B5523+5655=11178+1142=12320+7360=', 'gen': '19680E'}\n",
-      "{'question': 'B7646+2607=10253+5962=16215+6479=', 'gen': '22694E'}\n",
-      "{'question': 'B6170+7481=', 'gen': '13651E'}\n",
-      "{'question': 'B8975+7528=16503+7284=23787+7744=', 'gen': '31531E'}\n",
-      "{'question': 'B427+9585=10012+4876=14888+6666=', 'gen': '21554E'}\n",
-      "{'question': 'B5646+2024=7670+8478=16148+3802=', 'gen': '19950E'}\n",
-      "{'question': 'B8332+553=8885+7602=16487+1586=', 'gen': '18073E'}\n",
-      "{'question': 'B2801+482=3283+6315=9598+6933=', 'gen': '16539E'}\n"
+      "{'question': 'B9818+4065=13883+7277=21160+9723=', 'gen': '30883E'}\n",
+      "{'question': 'B5354+5465=', 'gen': '10819E'}\n",
+      "{'question': 'B5823+9136=', 'gen': '14959E'}\n",
+      "{'question': 'B5197+8122=13319+6036=19355+5026=', 'gen': '24381E'}\n",
+      "{'question': 'B4619+4586=9205+9146=', 'gen': '18351E'}\n",
+      "{'question': 'B7590+472=8062+664=', 'gen': '8726E'}\n",
+      "{'question': 'B530+8908=9438+4916=', 'gen': '14354E'}\n",
+      "{'question': 'B1118+1419=2537+3398=5935+9187=', 'gen': '15122E'}\n"
      ]
     }
    ],
    "source": [
     "#====question====\n",
-    "question = random.choices(dataset, k=16)\n",
+    "question = random.choices(dataset, k=8)\n",
     "question = [i['text'] for i in question]\n",
     "\n",
     "question = tokenizer(question,\n",
@@ -127,62 +119,16 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "880825aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 1670+5429=7099+2747=\n",
-      "3 3924+3389=7313+8346=15659+8604=\n",
-      "3 2719+6277=8996+3262=12258+953=\n",
-      "2 826+1907=2733+5646=\n",
-      "3 3922+1595=5517+1165=6682+4480=\n",
-      "1 3701+1823=\n",
-      "3 5799+8308=14107+5858=19965+2942=\n",
-      "3 4707+9207=13914+4240=18154+8104=\n",
-      "1 6662+8664=\n",
-      "3 4694+7519=12213+6355=18568+9461=\n",
-      "1 1152+7609=\n",
-      "2 4902+4140=9042+9570=\n",
-      "2 537+4710=5247+6295=\n",
-      "3 9543+5018=14561+6831=21392+8808=\n",
-      "1 2630+1753=\n",
-      "2 7195+6947=14142+3261=\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in random.choices(dataset, k=16):\n",
-    "    print(i['text'].count('='),i['text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "1ba42f02",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sent 1000+1000=\n",
-      "q B1000+1000=\n",
-      "gen [6, 4, 4, 4]\n",
-      "gen [6, 4, 4, 4]\n",
-      "gen 2000\n",
-      "sent 1000+1000=2000\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'2000'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,15 +147,11 @@
     "        idx = sent.index('=') + 1\n",
     "        sent = sent[idx:]\n",
     "\n",
-    "    print('sent', sent)\n",
-    "\n",
     "    #编码\n",
     "    q = tokenizer([sent],\n",
     "                  device=device,\n",
     "                  add_bos_token=True,\n",
     "                  add_eos_token=False)['input_ids']\n",
-    "\n",
-    "    print('q', tokenizer.decode(q[0]))\n",
     "\n",
     "    #生成回答\n",
     "    gen = generate(model_actor,\n",
@@ -223,23 +165,15 @@
     "        idx = gen.index(tokenizer.eos_token_id)\n",
     "        gen = gen[:idx]\n",
     "\n",
-    "    print('gen', gen)\n",
-    "\n",
     "    #如果生成了多余的对话,切除\n",
     "    if tokenizer.eq_token_id in gen:\n",
     "        idx = gen.index(tokenizer.eq_token_id)\n",
     "        gen = gen[:idx]\n",
     "\n",
-    "    print('gen', gen)\n",
-    "\n",
     "    gen = tokenizer.decode(gen)\n",
-    "\n",
-    "    print('gen', gen)\n",
     "\n",
     "    #拼接上下文\n",
     "    sent += gen\n",
-    "\n",
-    "    print('sent', sent)\n",
     "\n",
     "    return gen\n",
     "\n",
@@ -249,26 +183,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "56e7c83b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sent 1000+1000=2000+500=\n",
-      "q B1000+1000=2000+500=\n",
-      "gen [6, 9, 4, 4]\n",
-      "gen [6, 9, 4, 4]\n",
-      "gen 2500\n",
-      "sent 1000+1000=2000+500=2500\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'2500'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference('+500')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1394a1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3000'"
       ]
      },
      "execution_count": 7,
@@ -283,61 +226,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1394a1bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sent 1000+1000=2000+500=2500+500=\n",
-      "q B1000+1000=2000+500=2500+500=\n",
-      "gen [7, 4, 4, 4]\n",
-      "gen [7, 4, 4, 4]\n",
-      "gen 3000\n",
-      "sent 1000+1000=2000+500=2500+500=3000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'3000'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inference('+500')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "7e2316c6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sent 2000+500=2500+500=3000+500=\n",
-      "q B2000+500=2500+500=3000+500=\n",
-      "gen [7, 9, 4, 4]\n",
-      "gen [7, 9, 4, 4]\n",
-      "gen 3500\n",
-      "sent 2000+500=2500+500=3000+500=3500\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'3500'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
